Updated framework to .Net Core 3.1 Adjust main files to account for new recommended objects and remote unnecessary code. Some adjustments to naming conventions. Corrected Assignment API call to properly add.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=taskt;Trusted_Connection=True;ConnectRetryCount=0"
+  "ConnectionString": "Server=LOCALHOST\\SQLEXPRESS;Database=taskt;User Id=tasktApp;Password=pass@1234;"
 }
