Fixed issue related to entity frameowkr update for GetTopWorkers. Replaced specific metric API calls with a generic call. Added exception handling to critical react fetch operations and increased timing between refresh for better site performance.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=LOCALHOST\\SQLEXPRESS;Database=taskt;User Id=tasktApp;Password=pass@1234;"
+  "ConnectionString": "Server=LOCALHOST\\SQLEXPRESS;Database=taskt;User Id=tasktApp;Password=Accel!rat3;"
 }
